tests/miniJava/neg/000528_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { extends [ 0 ] = 0 ; } }
